--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New category</h1>
+
 <br/>
+<br/>
+<fieldset>
+<legend>New Category</legend>
 <%= render 'form' %>
 
 <%= link_to 'Back', categories_path %>
+</fieldset>
