--- a/app/views/industries/_form.html.erb
+++ b/app/views/industries/_form.html.erb
@@ -11,9 +11,11 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="row">
+    <div class="small-8 columns">
     <%= f.label 'Industry Name' %><br />
     <%= f.text_field :indName %>
+    </div>
   </div>
   <div class="actions">
     <%= f.submit %>
