--- a/app/views/industries/edit.html.erb
+++ b/app/views/industries/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Edit Industry</h1>
+<br/>
+<br/>
+<fieldset>
+<legend>
+  Edit Industry
+</legend>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @industry %> |
 <%= link_to 'Back', industries_path %>
+</fieldset>
