--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,5 +1,9 @@
-<h1>Editing question</h1>
+
 <br/>
+<br/>
+<fieldset>
+  <legend>Editing Question</legend>
+
 <% if !(@question.source_id.nil?) %>
 <p><b>Question is a private copy</b></p>
 <% end %>
@@ -11,3 +15,4 @@
 <% else %>
 <%= link_to 'Back', '/questions/review' %>
 <% end %>
+</fieldset>
