--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New My Question</h1><br/>
+
+<br/>
+<br/>
+<fieldset>
+  <legend>
+    New User Question
+  </legend>
+
 
 <%= render 'form' %>
 
 <%= link_to 'Back', questions_path %>
+</fieldset>
