--- a/app/views/requirements/edit.html.erb
+++ b/app/views/requirements/edit.html.erb
@@ -1,7 +1,10 @@
 <h1>Editing requirement</h1>
 <br/>
 <br/>
-
+<fieldset>
+  <legend>
+    Editing Requirement
+  </legend>
 <%= render 'form' %>
 
 <%= link_to 'Show', @requirement %> |
@@ -10,3 +13,4 @@
 <% else %>
 <%= link_to 'Back', '/requirements/review' %>
 <% end %>
+</fieldset>
