--- a/app/views/requirements/new.html.erb
+++ b/app/views/requirements/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New requirement</h1>
 <br/><br/>
+<fieldset>
+  <legend>
+    New Requirement
+  </legend>
 <%= render 'form' %>
 
 <%= link_to 'Back', requirements_path %>
+</fieldset>
