--- a/app/views/user_questions/edit.html.erb
+++ b/app/views/user_questions/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing My Question</h1>
+
+<br/>
+<br/>
+<fieldset>
+  <legend>
+    Editing User Question
+  </legend>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @user_question %> |
 <%= link_to 'Back', user_questions_path %>
+</fieldset>
