--- a/app/views/user_requirements/edit.html.erb
+++ b/app/views/user_requirements/edit.html.erb
@@ -1,6 +1,14 @@
 <h1>Editing My Requirement</h1>
+<br/>
+<br/>
+<fieldset>
+  <legend>
+    Editing My Requirement
+  </legend>
+
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @user_requirement %> |
 <%= link_to 'Back', user_requirements_path %>
+</fieldset>
