--- a/app/views/user_requirements/show.html.erb
+++ b/app/views/user_requirements/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <b>Requirement:</b>
-  <%= @user_requirement.req_text %>
+  <%= simple_format(@user_requirement.req_text) %>
 </p>
 <div>
   <p><b>Industries</b></p>
