--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Edit User Account</h1>
+
+<br/>
+<br/>
+<fieldset>
+  <legend>
+    Edit User Account
+  </legend>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
+</fieldset>
