--- a/app/views/administration/display.html.erb
+++ b/app/views/administration/display.html.erb
@@ -1,20 +1,26 @@
 <h1>Administration</h1>
 <br/>
 <br/>
-<h3><%= link_to "Manage Categories", categories_path %></h3><br/>
-<h3><%= link_to "Manage Users", users_path %></h3><br/>
+<fieldset>
+  <legend>Administration</legend>
+<h5><%= link_to "Manage Users", users_path %></h5><br/>
 <hr/>
-<h3><%= link_to "Manage External Applications", oauth_applications_path %></h3><br/>
+<h5><%= link_to "Manage External Applications", oauth_applications_path %></h5><br/>
 <hr/>
 <h3>Send a System Announcement</h3>
 <%= form_tag system_announcement_path, method: :post do %>
-  <div class="field">
+  <div class="row">
+    <div class="small-8 columns">
     <%=  label_tag :subject %>
     <%=  text_field_tag :subject, params[:subtext] %>
+   </div>
   </div>
-  <div class = "field">
+  <div class = "row">
+  <div class = "small-12 columns">
     <%= label_tag :announcement %><br/>
     <%= text_area_tag :announcement, params[:announcetext], size: "55 x 10" %>
   </div>
+  </div>
   <div class="actions"><%= submit_tag "Send Announcement" %></div>
+</fieldset>
 <% end %>
