--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -10,15 +10,18 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
+  <div class="row">
+  <div class="small-8 columns">
     <%= f.label "Category Name" %><br />
     <%= f.text_field :catName %>
   </div>
-    <div class="field">
+  </div>
+    <div class="row">
+    <div class="small-8 columns">
         <%= f.label "Category Abbreviation" %><br />
         <%= f.text_field :catAbbr %>
       </div>
+    </div>
   <div class="actions">
     <%= f.submit %>
   </div>
