--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Edit Category</h1>
-
+<br/>
+<br/>
+<fieldset>
+<legend>Edit Category</legend>
 <%= render 'form' %>
 
 <%= link_to 'Show', @category %> |
 <%= link_to 'Back', categories_path %>
+
+</fieldset>
