--- a/app/views/industries/new.html.erb
+++ b/app/views/industries/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New industry</h1>
-
+<br/>
+<br/>
+<fieldset>
+  <legend>New Industry</legend>
 <%= render 'form' %>
 
 <%= link_to 'Back', industries_path %>
+
+</fieldset>
