--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,90 +1,135 @@
 <!DOCTYPE html>
-<!--
-Author: Reality Software
-Website: http://www.realitysoftware.ca
-Note: This is a free template released under the Creative Commons Attribution 3.0 license,
-which means you can use it in any way you want provided you keep the link to the author intact.
--->
-<html>
-<head>
-  <title>LiMSpec</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<div id = "main">
-<% if current_user %>
-<div class="menu"><ul class="menu_list">
-  <% if current_user.role?(:Administrator) %>
-  <li>
-  <%= link_to "Administration", administer_path %>
-  </li>
-  <% end %>
-  <li class="topmenu">
-  <a href="#">Requirements</a>
-    <ul class="submenu">
-      <li>
-        <%=  link_to "Requirements List", requirements_path %>
-      </li>
-      <li>
-        <%= link_to "My Requirements", user_requirements_path%>
-      </li>
-      <% if can? :create, Requirement %>
-      <li>
-        <%= link_to 'New Requirement', new_requirement_path %>
-      </li>
-      <% end %>
-      <li>
-              <%= link_to 'New My Req.', new_user_requirement_path %>
-      </li>
-      <% if can? :review, Requirement %>
-       <li>
-          <%= link_to 'Review Submitted Reqs', '/requirements/review' %>
-       </li>
-      <% end %>
+<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!--[if lt IE 7 ]> <html class="ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="ie8" lang="en"> <![endif]-->
+<!--[if IE 9 ]>    <html class="ie9" lang="en"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
+  <head>
+  	<meta charset="utf-8" />
+
+  	<!-- Uncomment to make IE8 render like IE7 -->
+  	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
+
+  	<!-- Set the viewport width to device width for mobile -->
+  	<meta name="viewport" content="width=device-width, initial-scale=0.75" />
+
+  	<title><%= content_for?(:title) ? yield(:title) : "LiMSpec" %></title>
+
+  	<%= stylesheet_link_tag    "application" %>
+  	<%= javascript_include_tag "vendor/custom.modernizr" %>
+    <%= csrf_meta_tags %>
+  </head>
+
+  <body>
+  <div class="panel show-for-medium-up">
+  <%=image_tag('NewLimspec_Logo.png') %>
+  </div>
+  <% if current_user %>
+
+      <nav class="top-bar" data-topbar>
+      <ul class="title-area">
+      <li class="name"></li>
+      <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
     </ul>
-  </li>
-  <% if current_user.role?(:Administrator) %>
-  <li>
-  <%= link_to "Industries", industries_path %>
-  </li>
+          <section class = "top-bar-section">
+           <ul class="left">
+               <% if current_user.role?(:Administrator) %>
+                 <li class="divider"></li>
+                 <li><%= link_to "Administration", administer_path %></li>
+                 <li class="divider"></li>
+             <% end %>
+
+               <li><a href="#" data-dropdown="reqDrop">Requirements</a>
+               <ul id="reqDrop" class="f-dropdown" data-dropdown-content>
+                 <li>
+                   <%= link_to "Requirements List", requirements_path %>
+                 </li>
+                 <li>
+                   <%= link_to "My Requirements", user_requirements_path %>
+                 </li>
+                 <% if can? :create, Requirement %>
+                 <li>
+                   <%= link_to 'New Requirement', new_requirement_path %>
+                 </li>
+                 <% end %>
+                 <li>
+                   <%= link_to 'New My Requirement', new_user_requirement_path %>
+                 </li>
+                 <% if can? :review, Requirement %>
+                  <li>
+                    <%= link_to 'Review Submitted Reqs', '/requirements/review' %>
+                  </li>
+                 <% end %>
+               </ul>
+               </li>
+             <li class="divider"></li>
+             <li><a href="#" data-dropdown="qDrop">Questions</a>
+                <ul id="qDrop" class="f-dropdown" data-dropdown-content>
+                    <li>
+                       <%= link_to "Questions", questions_path %>
+                    </li>
+                    <li>
+                       <%= link_to "My Questions", user_questions_path %>
+                    </li>
+                    <% if can? :create, Question %>
+                     <li>
+                        <%= link_to "New Question", new_question_path %>
+                     </li>
+                    <% end %>
+                     <li>
+                      <%= link_to "New My Question", new_user_question_path %>
+                     </li>
+                  </ul>
+             </li>
+             <li class="divider"></li>
+             <% if current_user.role?(:Administrator) %>
+             <li>
+               <%= link_to "Industries", industries_path %>
+             </li>
+             <li class="divider"></li>
+             <% end %>
+             <% if current_user.role?(:Administrator) %>
+             <li>
+               <%= link_to "Categories", categories_path %>
+             </li>
+             <li class="divider"></li>
+             <% end %>
+             <li><a href="#" data-dropdown="lspecDrop">Generate LiMSpec</a>
+             <ul id="lspecDrop" class="f-dropdown" data-dropdown-content>
+               <li>
+                 <%= link_to "Public Items", 'vendorRequest/createPublicRequirementDoc.odt' %>
+               </li>
+             <li>
+               <%= link_to "My Items", 'vendorRequest/createPrivateRequirementDoc.odt' %>
+             </li>
+             </ul>
+             </li>
+             <li class="divider"></li>
+           </ul>
+
+      </section>
+
+      </nav>
   <% end %>
-  <li class = "topmenu">
-  <a href="#">Questions</a>
-    <ul class = "submenu">
-      <li><%= link_to "Questions", questions_path %></li>
-      <li><%= link_to "My Questions", user_questions_path %></li>
-      <% if can? :create, Question %>
-      <li><%= link_to "New Question", new_question_path %></li>
-      <% end %>
-      <li><%= link_to "New My Question", new_user_question_path %></li>
-    </ul>
-  </li>
-  <li class = "topmenu">
-  <a href = "#">Generate LIMSpec</a>
-  <ul class = "submenu">
-    <li><%= link_to "Public Items", '/vendorRequest/createPublicRequirementDoc.odt' %> </li>
-    <li><%= link_to "My Items", 'vendorRequest/createPrivateRequirementDoc.odt' %></li>
-  </ul>
-  </li>
-</ul>
-</div> <br/><br/>
-  <% end %>
-<div id="header"></div>
- <br/><br/>
-<div id="user_nav">
-  <%if current_user%>
-    <a href="http://www.limswiki.org/index.php/Limspec">About</a> |
-    <%=  link_to "Contact", contact_us_path %> |
-    <%=  link_to "Logout", logout_path %> |
-    <%=  link_to "Account", edit_user_path(current_user)  %>
-  <%end%>
-</div><br/>
-  <div id="text">
-<% flash.each do |name, msg| %> <%= content_tag :div, msg, :id => "flash_#{name}" %> <% end %>
-<%= yield %>
-</div>
-</div>
-</body>
+    <br/>
+    <br/>
+    <div class="row">
+        <div class="small-20 columns">
+          <div class="panel radius pageContentPanel">
+            <div class="right">
+              <p class="small">
+              <%if current_user%>
+                <a href="http://www.limswiki.org/index.php/Limspec">About</a> |
+                <%=  link_to "Contact", contact_us_path %> |
+                <%=  link_to "Logout", logout_path %> |
+                <%=  link_to "Account", edit_user_path(current_user)  %>
+              <%end%> </p>
+          </div>
+          <%= yield %>
+          </div>
+    </div>
+    </div>
+    <%= javascript_include_tag "application" %>
+  </body>
 </html>
