--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,4 +1,10 @@
-<h1>Reset Password</h1>
+
+<br/>
+<br/>
+<fieldset>
+  <legend>
+    Reset Password
+  </legend>
 
 <%= form_for @identity, :url => password_reset_path(params[:id]) do |f| %>
   <% if @identity.errors.any? %>
@@ -11,13 +17,18 @@
       </ul>
     </div>
   <% end %>
-  <div class="field">
+  <div class="row">
+  <div class="small-8 columns">
     <%= f.label :password %>
     <%= f.password_field :password %>
   </div>
-  <div class="field">
+  </div>
+  <div class="row">
+  <div class="small-8 columns">
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
   </div>
+  </div>
   <div class="actions"><%= f.submit "Update Password" %></div>
 <% end %>
+</fieldset>
