--- a/app/views/user_questions/new.html.erb
+++ b/app/views/user_questions/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New user_question</h1>
-
+<br/>
+<br/>
+<fieldset>
+  <legend>
+    New User Question
+  </legend>
 <%= render 'form' %>
 
 <%= link_to 'Back', user_questions_path %>
+
+</fieldset>
