--- a/app/views/user_requirements/_form.html.erb
+++ b/app/views/user_requirements/_form.html.erb
@@ -11,26 +11,39 @@
     </div>
     <% end %>
     <br/>
-    <div class="field"><%= f.label "Category"%><%=  collection_select :user_requirement, :category_id, Category.all, :id, :catName, :include_blank=> true %></div>
-        <div class="field">
+    <div class="row">
+     <div class="small-8 columns">
+      <%= f.label "Category"%><%=  collection_select :user_requirement, :category_id, Category.all, :id, :catName, :include_blank=> true %>
+     </div>
+    </div>
+        <div class="row">
+          <div class="small-8 columns">
             <%= f.label "Title" %><br />
             <%= f.text_field :req_title %>
         </div>
-        <div class="field">
-                    <%= f.label "Content" %><br />
-                    <%= f.text_area :req_text %>
         </div>
-    <div class="field">
-        <%=  label_tag "Industries" %>  <br/>
+        <div class="row">
+          <div class="small-12 columns">
+
+                    <%= f.label "Requirement" %><br />
+                    <%= f.text_area :req_text %>
+         </div>
+        </div>
+    <div class="row">
+      <div class="small-12 columns">
+        <h4> Industries</h4>  <br/>
             <% Industry.all.each do |industry| %>
-            <div>
               <%=  hidden_field_tag "user_requirement[industry_ids][]", nil %>
+              <label for=" <%=dom_id(industry) %>" >
               <%=  check_box_tag "user_requirement[industry_ids][]", industry.id, @user_requirement.industries.include?(industry) %>
-              <%=  label_tag dom_id(industry), industry.indName %>
-            </div>
+              <%= industry.indName %>
+              </label>
             <% end %>
           </div>
+    </div>
+  <div class="row">
   <div class="actions">
     <%= f.submit %>
+  </div>
   </div>
 <% end %>
