--- a/app/views/user_requirements/new.html.erb
+++ b/app/views/user_requirements/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New My Requirement</h1>
+<br/>
+<br/>
+<fieldset>
+  <legend>
+    New User Requirement
+  </legend>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', user_requirements_path %>
+</fieldset>
