--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,10 @@
-<h1>New user</h1>
+
+<br/>
+<br/>
+<fieldset>
+  <legend>
+    New User
+  </legend>
 
 <%= form_tag "/auth/identity/register" do %>
   <% if @user && @user.errors.any? %>
@@ -11,23 +17,35 @@
       </ul>
     </div>
   <% end %>
-  <div class="field">
+  <div class="row">
+    <div class="small-12 columns">
     <%= label_tag :name %><br>
     <%= text_field_tag :name, @user.try(:name) %>
   </div>
-  <div class="field">
+  </div>
+  <div class="row">
+    <div class="small-12 columns">
     <%= label_tag :email %><br>
     <%= text_field_tag :email, @user.try(:email) %>
+    </div>
   </div>
-  <div class="field">
+  <div class="row">
+    <div class="small-12 columns">
     <%= label_tag :password %><br>
     <%= password_field_tag :password %>
+    </div>
   </div>
-  <div class="field">
+  <div class="row">
+    <div class="small-12 columns">
     <%= label_tag :password_confirmation %><br>
     <%= password_field_tag :password_confirmation %>
   </div>
-  <div class="actions"><%= submit_tag "Register" %></div>
-<% end %>
+  </div>
+  <div class="row">
 
+
+  <div class="actions"><%= submit_tag "Register" %></div>
+  </div>
+<% end %>
+</fieldset>
 <%= link_to 'Back', users_path %>
