Fixing issues 32 and 30

--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -2,8 +2,8 @@
 
 <table>
   <tr>
-    <th>Orgname</th>
-    <th>Orgtype</th>
+    <th>Organization Name</th>
+    <th>Organization Type</th>
     <th></th>
     <th></th>
     <th></th>
