--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,9 @@
                      <%= link_to "Manage Industries", industries_path %>
                    </li>
                    <li>
+                     <%= link_to "Manage Product Classes", product_classes_path %>
+                   </li>
+                   <li>
                      <%= link_to "System Announcement", create_system_announcement_path %>
                    </li>
                  </ul>
