--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -21,9 +21,13 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
-  <div class="small-8 column">
+  <div class="small-6 column">
     <%= f.label :vendor %><br />
     <%= f.text_field :vendor %>
+  </div>
+  <div class="small-6 column">
+    <%= f.label :headquarterLocation, "Headquarters Location" %><br/>
+    <%= f.text_field :headquarterLocation %>
   </div>
   </div>
   <div class="row">
